[gd_scene load_steps=26 format=3 uid="uid://btwsnu1lwi4qw"]

[ext_resource type="Script" uid="uid://biknklwl4lugm" path="res://Scripts/slime.gd" id="1_4lx4x"]
[ext_resource type="Texture2D" uid="uid://8niyel4sinrm" path="res://Assets/FreeOnlineAssets/Cute_Fantasy_Free/Enemies/Slime.png" id="2_6kvin"]
[ext_resource type="Texture2D" uid="uid://d1vh4aa4idx6x" path="res://Assets/OurAssets/Sprites/Blue Slime.png" id="2_hm6tv"]
[ext_resource type="PackedScene" uid="uid://bx5imp0ipv7wn" path="res://Scenes/Enemies/hitbox.tscn" id="3_hm6tv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_larvs"]
atlas = ExtResource("2_hm6tv")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_16kjp"]
atlas = ExtResource("2_hm6tv")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvc4l"]
atlas = ExtResource("2_hm6tv")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5igrg"]
atlas = ExtResource("2_hm6tv")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f0kj"]
atlas = ExtResource("2_6kvin")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_afpow"]
atlas = ExtResource("2_6kvin")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_287tu"]
atlas = ExtResource("2_6kvin")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0830c"]
atlas = ExtResource("2_6kvin")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghaa6"]
atlas = ExtResource("2_6kvin")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dp5w"]
atlas = ExtResource("2_6kvin")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta2yt"]
atlas = ExtResource("2_6kvin")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_auwsv"]
atlas = ExtResource("2_6kvin")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6lbm"]
atlas = ExtResource("2_hm6tv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkjhq"]
atlas = ExtResource("2_hm6tv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp62l"]
atlas = ExtResource("2_hm6tv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hphkj"]
atlas = ExtResource("2_hm6tv")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sapfs"]
atlas = ExtResource("2_hm6tv")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_iifgy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_larvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16kjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvc4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5igrg")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f0kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afpow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_287tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0830c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghaa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dp5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta2yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auwsv")
}],
"loop": false,
"name": &"Jumping",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6lbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkjhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp62l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hphkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sapfs")
}],
"loop": true,
"name": &"Walking",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1f0kj"]
radius = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1f0kj"]
size = Vector2(19.0394, 14.0718)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1rqp"]
size = Vector2(14, 9)

[node name="Slime" type="CharacterBody2D"]
unique_name_in_owner = true
z_index = 1
motion_mode = 1
script = ExtResource("1_4lx4x")

[node name="SlimeSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.349689, 0.349689, 0.349689, 1)
sprite_frames = SubResource("SpriteFrames_iifgy")
animation = &"Death"
autoplay = "Walking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 2
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_1f0kj")

[node name="HurtBox" type="Area2D" parent="."]

[node name="SlimeHurtBox" type="CollisionShape2D" parent="HurtBox"]
unique_name_in_owner = true
position = Vector2(-1.5, 1)
scale = Vector2(0.997932, 0.994899)
shape = SubResource("RectangleShape2D_1f0kj")

[node name="HitboxSlime" parent="." instance=ExtResource("3_hm6tv")]
unique_name_in_owner = true

[node name="HitboxCollisionSlime" type="CollisionShape2D" parent="HitboxSlime"]
unique_name_in_owner = true
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_x1rqp")

[connection signal="animation_finished" from="SlimeSprite" to="." method="_on_enemy_sprite_animation_finished"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
